--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,16 @@
-h1 {
-  font-size: 12px;
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: sans-serif;
 }
 
-.warning {
-  color: tomato;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
